--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
+	title = 'Diego Ocariz: Personal Site',
+	description = 'The personal site of Diego Ocariz',
 } = Astro.props;
 ---
 
